+ Refactor architecture